apps/clubs/comets/data_acq/resources/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: grafana-ingress
spec:
  virtualhost:
    fqdn: grafana.prodv2.cedille.club
    tls:
      secretName: grafana-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: grafana
          port: 80
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: influxdb2-ingress
spec:
  virtualhost:
    fqdn: influxdb.prodv2.cedille.club
    tls:
      secretName: influxdb2-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: influxdb2
          port: 80
