apps/clubs/comets/data_acq/resources/influxdb2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb2-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - secretName: influxdb2-tls
      hosts:
        - influxdb.prodv2.cedille.club
  rules:
    - host: influxdb.prodv2.cedille.club
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: influxdb2
                port:
                  number: 80
